--- a/.env
+++ b/.env
@@ -30,14 +30,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=e96d9dfc17d7f7
-MAIL_PASSWORD=4c715515e64427
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=josmor32123@gmail.com
+MAIL_PASSWORD=ServicioSocial01*
 MAIL_ENCRYPTION=tls
 
-MAIL_FROM_ADDRESS=bot@sict.gob.mx
-MAIL_FROM_NAME="SICT"
+MAIL_FROM_ADDRESS=josmor32123@gmail.com
+MAIL_FROM_NAME="$APP_NAME"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
