--- a/.env
+++ b/.env
@@ -30,14 +30,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
-MAIL_USERNAME=josmor32123@gmail.com
-MAIL_PASSWORD=ServicioSocial01*
-MAIL_ENCRYPTION=tls
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 
-MAIL_FROM_ADDRESS=josmor32123@gmail.com
-MAIL_FROM_NAME="$APP_NAME"
+MAIL_FROM_ADDRESS=sict@gob.mx
+MAIL_FROM_NAME="SICT"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
