--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 APP_NAME=SAAUE
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:pP4m6bJCpucU+GF9CiQyBSLe6VgOqe96X39/e+KG2Mc=
-APP_DEBUG=debug
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://saaue.gob.mx
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -23,9 +23,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=10.33.170.34
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=10.33.170.34
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
