--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=SAAUE
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:pP4m6bJCpucU+GF9CiQyBSLe6VgOqe96X39/e+KG2Mc=
 APP_DEBUG=debug
 APP_URL=http://localhost
